# ecommerse

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
static/: style.css
static/css/: animate.css  meanmenu.min.css  responsive.css
static/js/: countdon.min.js  jquery-price-slider.js  jquery.scrollUp.min.js  main.js  wow.min.js
static/lib/css/: nivo-slider.css
static/lib/js/: jquery.nivo.slider.js
store/: admin.py  context_processors.py  models.py  selectors.py  urls.py  views.py
store/management/commands/: scrape.py  upload_images.py
store/migrations/: 0001_initial.py  0002_alter_review_comment.py  0003_alter_product_description.py
store/services/: rozetka_scraper.py  upload_images.py
templates/: account.html  base.html  best_seller.html  category_menu.html  footer.html  header.html  hot_deals.html  index.html  pagination.html  product-details.html  registration.html  related_products.html  shop-list.html
templates/emails/: email_activation.html
users/: admin.py  forms.py  manager.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_client.py
utils/: model_behaviour.py
