[project]
name = "ecommerse"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bandit>=1.8.3",
    "django>=5.2",
    "django-jazzmin>=3.0.1",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "psycopg>=3.2.7",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.9",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F401"]
exclude = [
    "migrations",
    "**/migrations/*.py",
    "**/migrations/**/*.py"
]
