[project]
name = "ecommerse"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anyascii>=0.3.2",
    "bandit>=1.8.3",
    "django>=5.2",
    "django-debug-toolbar>=5.2.0",
    "django-jazzmin>=3.0.1",
    "django-summernote>=0.8.20.0",
    "django-widget-tweaks>=1.5.0",
    "isort>=6.0.1",
    "pillow>=11.2.1",
    "pre-commit>=4.2.0",
    "psycopg>=3.2.7",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "ruff>=0.11.9",
    "selectolax>=0.3.29",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F401"]
exclude = [
    "migrations",
    "**/migrations/*.py",
    "**/migrations/**/*.py"
]
